Fix build for newer Java